[gd_scene load_steps=26 format=3 uid="uid://cf33nhgtwjo87"]

[ext_resource type="Script" uid="uid://cmmv3os4lab71" path="res://scripts/cave_monster/dustling_black.gd" id="1_c5dbc"]
[ext_resource type="Texture2D" uid="uid://5hy0h8e5c77h" path="res://characters/Cave_Monster/Dustling/Dustling_pink.png" id="2_c5dbc"]
[ext_resource type="FontFile" uid="uid://d2jfgwkyvxibg" path="res://fonts/PixelOperator8-Bold.ttf" id="3_xcrtm"]
[ext_resource type="AudioStream" uid="uid://diyot5glhst83" path="res://sound/TMSK_Sound/dustling_walk_1.mp3" id="4_3bma3"]
[ext_resource type="AudioStream" uid="uid://diw6ddjkhoaxy" path="res://sound/TMSK_Sound/dustling_die.mp3" id="5_xcrtm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3bma3"]
atlas = ExtResource("2_c5dbc")
region = Rect2(0, 100, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcrtm"]
atlas = ExtResource("2_c5dbc")
region = Rect2(33, 100, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_srh2u"]
atlas = ExtResource("2_c5dbc")
region = Rect2(66, 100, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sobd"]
atlas = ExtResource("2_c5dbc")
region = Rect2(99, 100, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrqih"]
atlas = ExtResource("2_c5dbc")
region = Rect2(132, 100, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttc83"]
atlas = ExtResource("2_c5dbc")
region = Rect2(165, 100, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vbhs"]
atlas = ExtResource("2_c5dbc")
region = Rect2(0, 0, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww2dn"]
atlas = ExtResource("2_c5dbc")
region = Rect2(33, 0, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrnat"]
atlas = ExtResource("2_c5dbc")
region = Rect2(66, 0, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ms7"]
atlas = ExtResource("2_c5dbc")
region = Rect2(99, 0, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kma41"]
atlas = ExtResource("2_c5dbc")
region = Rect2(132, 0, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc8x5"]
atlas = ExtResource("2_c5dbc")
region = Rect2(165, 0, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbmgt"]
atlas = ExtResource("2_c5dbc")
region = Rect2(0, 50, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0o8l"]
atlas = ExtResource("2_c5dbc")
region = Rect2(33, 50, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yefw"]
atlas = ExtResource("2_c5dbc")
region = Rect2(66, 50, 33, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmvnh"]
atlas = ExtResource("2_c5dbc")
region = Rect2(99, 50, 33, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_iee7b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bma3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcrtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srh2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sobd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrqih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttc83")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vbhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww2dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrnat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ms7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kma41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc8x5")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbmgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0o8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yefw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmvnh")
}],
"loop": false,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e04re"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t6xmf"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ihfnt"]
radius = 8.0

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("step_audio", "die_audio")]
script = ExtResource("1_c5dbc")
step_audio = NodePath("Step_Audio")
die_audio = NodePath("Die_Audio")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iee7b")
animation = &"side_walk"
autoplay = "idle"
offset = Vector2(0, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_e04re")

[node name="Label_enemy_power" type="Label" parent="."]
offset_left = -36.0
offset_top = 11.0
offset_right = 39.0
offset_bottom = 22.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_xcrtm")
theme_override_font_sizes/font_size = 8
text = "50"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Detection_Area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area"]
shape = SubResource("CircleShape2D_t6xmf")

[node name="damage_nmber_origin" type="Node2D" parent="."]
position = Vector2(13, -9)

[node name="EnemyHitBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
shape = SubResource("CircleShape2D_ihfnt")

[node name="Step_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3bma3")
volume_db = -20.0
max_distance = 200.0

[node name="Die_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xcrtm")
max_distance = 200.0
